# FMEDiffusion

./: README.md  pyproject.toml
scripts/: fme_animatediff.py  fme_stable_video_diffusion.py  original_animatediff.py  original_stable_video_diffusion.py
src/fme/: __init__.py  scheme.py  wrap.py
src/fme/models/: __init__.py  unet_spatio_temporal_condition.py
src/fme/nn/: blocks.py  unet_blocks.py
src/fme/utils/: __init__.py  config_utils.py
