[project]
name = "fme"  # Required
version = "0.0.1"  # Required
description = "Fast and Memory-Efficient Video Diffusion using Streamlined Inference"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.10"
#license = {text = "MIT License"}
keywords = ["Diffusion"]  # Optional
authors = [
  {name = "Yushu Wu", email = "wu.yushu@northeastern.edu" } # Optional
]
maintainers = [
  {name = "Yushu Wu", email = "wu.yushu@northeastern.edu" } # Optional
]

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
#  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "diffusers[torch]==0.30.1",
  "transformers",
  "opencv-python"
]

[project.urls]  # Optional
"Homepage" = "https://github.com/wuyushuwys/FMEDiffusion"
"Bug Reports" = "https://github.com/wuyushuwys/FMEDiffusion/issues"
"Source" = "https://github.com/wuyushuwys/FMEDiffusion"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"